name:                diff
version:             0.1.0.0
synopsis:            an experiment in automatic differentiation of programs
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Sam Roberts
maintainer:          sam.roberts.1983@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Diff.Play
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4.6,
                       containers >= 0.5,
                       text >= 1.2,
                       transformers >= 0.4
  -- hs-source-dirs:      
  default-language:    Haskell2010
